// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GModal should match with snapshot 1`] = `
<transition-stub
  name="modal-fade"
>
  <div
    class="g-modal"
    style=""
  >
    <div
      class="g-modal-mask"
    />
     
    <div
      class="g-modal-wrapper"
    >
      <div
        class="g-modal-container g-d-flex g-d-direction-column g-p-30"
      >
        <div
          class="g-modal-header g-d-flex g-d-justify-space-between"
        >
          <div
            class="g-text-main-grey-500 -headline-04 g-text"
          >
            
            Custom Title
          
          </div>
           
          <svg
            class="g-icon feather feather--x"
            dataName="x"
            dataTags="cancel,close,delete,remove,times,clear"
            dataType="x"
            fill="none"
            height="24px"
            stroke="var(--light-grey-500)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="18"
              x2="6"
              y1="6"
              y2="18"
            />
            <line
              x1="6"
              x2="18"
              y1="6"
              y2="18"
            />
          </svg>
        </div>
         
        <div
          class="g-modal-body g-my-30"
        >
          <div>
            Cras mattis consectetur purus sit amet fermentum.
          </div>
        </div>
         
        <div
          class="g-modal-footer"
        >
          <button>
            Close
          </button>
        </div>
      </div>
    </div>
  </div>
</transition-stub>
`;

exports[`GModal should match with snapshot with size 1`] = `
<transition-stub
  name="modal-fade"
>
  <div
    class="g-modal"
    style=""
  >
    <div
      class="g-modal-mask"
    />
     
    <div
      class="g-modal-wrapper -large -scrollable"
    >
      <div
        class="g-modal-container g-d-flex g-d-direction-column g-p-30"
      >
        <div
          class="g-modal-header g-d-flex g-d-justify-space-between"
        >
          <div
            class="g-text-main-grey-500 -headline-04 g-text"
          >
            
            Custom Title
          
          </div>
           
          <svg
            class="g-icon feather feather--x"
            dataName="x"
            dataTags="cancel,close,delete,remove,times,clear"
            dataType="x"
            fill="none"
            height="24px"
            stroke="var(--light-grey-500)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="18"
              x2="6"
              y1="6"
              y2="18"
            />
            <line
              x1="6"
              x2="18"
              y1="6"
              y2="18"
            />
          </svg>
        </div>
         
        <div
          class="g-modal-body g-my-30"
        >
          <div>
            Cras mattis consectetur purus sit amet fermentum.
          </div>
        </div>
         
        <div
          class="g-modal-footer"
        >
          <button>
            Close
          </button>
        </div>
      </div>
    </div>
  </div>
</transition-stub>
`;
